--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="D:\5th internship\msg\touchmaster_1700412164086.jpeg" alt="Your Profile Picture" class="profile-picture">
+            <img src=".\touchmaster_1700412164086.jpeg" alt="Your Profile Picture" class="profile-picture">
             <h1>Akshatha J S</h1>
             <p>Student of jnnce college</p>
         </div>
